完整的HeroExample实现

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>MyApp</title>
+  <!-- 大多数带路由的应用要在head标签中添加base元素,告诉路由器如何合成导航用的URL-->
+  <!-- 同时如果app目录(folder)是该应用的主目录的话, 则将href的值设为以下: -->
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <my-app></my-app>
 </body>
 </html>
